Changed module version to 1.0. Added registering of timezone option to the module initialization.

--- a/docs/mainpage.dox.tmpl
+++ b/docs/mainpage.dox.tmpl
@@ -199,7 +199,7 @@ hash: (1 member)
 
     @section odbcreleasenotes Release Notes
 
-    @subsection odbcv10 odbc Driver Version 1.0
+    @subsection odbcv1_0 odbc Driver Version 1.0
 
     - initial release
 
