--- a/docs/mainpage.dox.tmpl
+++ b/docs/mainpage.dox.tmpl
@@ -66,6 +66,9 @@ major_version * 1000000 + minor_version * 10000 + sub_version
     - \c "optimal-numbers": return numeric types as an integer if possible, if not return them as an arbitrary-precision number
     - \c "string-numbers": return numeric types as strings (for backwards-compatibility)
     - \c "numeric-numbers": return numeric types as arbitrary-precision number values
+    - \c "bigint-native": bind Qore int values as native \c SQL_C_SBIGINT values to ODBC statements
+    - \c "bigint-string": bind Qore int values as \c SQL_C_CHAR values (strings) to ODBC statements
+    - \c "fractional-precision": precision to use for the fractional seconds part of date, time, timestamp and interval values; in the range 1-9 (default is 3)
     - \c "qore-timezone": accepts a string argument that can be either a region name (ex: \c "Europe/Prague") or a UTC offset (ex: \c "+01:00") to set the server's time zone rules; this is useful if connecting to a database server in a different time zone.  If this option is not set then the server's time zone is assumed to be the same as the client's time zone; see @ref timezone.
 
     Options can be set in the \c Datasource or \c DatasourcePool constructors as in the following examples:
