--- a/docs/mainpage.dox.tmpl
+++ b/docs/mainpage.dox.tmpl
@@ -18,13 +18,27 @@
     .
     The module is tagged as such in the module's header (meaning it can be loaded unconditionally regardless of how the %Qore library was initialized).
 
-    Example of creating an ODBC Datasource:
+    Example of creating an ODBC Datasource using DSN-less connection:
     @code
-# Using DSN-less connection.
+# MySQL
 Datasource db = new Datasource(SQL::DSODBC, user, pass, NOTHING, "UTF8", NOTHING,
-    NOTHING, {"DRIVER": "MySQL ODBC 5.3 Unicode Driver", "Server": "192.168.20.1", "Database": "omquser"});
+    NOTHING, {"DRIVER": "MySQL ODBC 5.3 Unicode Driver", "Server": "192.168.15.1", "Database": "omquser"});
 
-# Using DSN connection.
+# PostgreSQL
+db = new Datasource(SQL::DSODBC, user, pass, NOTHING, "UTF8", NOTHING,
+    NOTHING, {"DRIVER": "PostgreSQL Unicode", "Server": "192.168.15.1", "Database": "omquser", "fractional-precision": 6});
+
+# Oracle
+db = new Datasource(SQL::DSODBC, user, pass, NOTHING, NOTHING, NOTHING,
+    NOTHING, {"DRIVER": "Oracle 12c ODBC driver", "Dbq": "192.168.15.1:1521/lorem", "bigint-string": True});
+
+# MS-SQL
+db = new Datasource(SQL::DSODBC, user, pass, NOTHING, NOTHING, NOTHING,
+    NOTHING, {"DRIVER": "ODBC Driver 11 for SQL Server", "Server": "192.168.15.1", "Database": "omquser"});
+    @endcode
+
+    Example of creating an ODBC Datasource using DSN connection:
+    @code
 Datasource db = new Datasource(SQL::DSODBC, user, pass, dsn, "UTF8");
     @endcode
 
@@ -63,10 +77,10 @@ major_version * 1000000 + minor_version * 10000 + sub_version
     @section odbcoptions Driver Options
 
     The odbc driver supports the following DBI options:
-    - \c "optimal-numbers": return numeric types as an integer if possible, if not return them as an arbitrary-precision number
-    - \c "string-numbers": return numeric types as strings (for backwards-compatibility)
-    - \c "numeric-numbers": return numeric types as arbitrary-precision number values
-    - \c "bigint-native": bind Qore int values as native \c SQL_C_SBIGINT values to ODBC statements
+    - \c "optimal-numbers": return received \c SQL_NUMERIC and \c SQL_DECIMAL values as integers if possible, if not return them as an arbitrary-precision numbers; this is the default
+    - \c "string-numbers": return received \c SQL_NUMERIC and \c SQL_DECIMAL values as strings (for backwards-compatibility)
+    - \c "numeric-numbers": return received \c SQL_NUMERIC and \c SQL_DECIMAL values as arbitrary-precision numbers (Qore number values)
+    - \c "bigint-native": bind Qore int values as native \c SQL_C_SBIGINT values to ODBC statements; this is the default
     - \c "bigint-string": bind Qore int values as \c SQL_C_CHAR values (strings) to ODBC statements
     - \c "fractional-precision": precision to use for the fractional seconds part of date, time, timestamp and interval values; in the range 1-9 (default is 3)
     - \c "qore-timezone": accepts a string argument that can be either a region name (ex: \c "Europe/Prague") or a UTC offset (ex: \c "+01:00") to set the server's time zone rules; this is useful if connecting to a database server in a different time zone.  If this option is not set then the server's time zone is assumed to be the same as the client's time zone; see @ref timezone.
@@ -79,11 +93,23 @@ major_version * 1000000 + minor_version * 10000 + sub_version
 
     Options are stored separately for each connection.
 
+    @warning In order to use \c int parameters in commands for the Oracle database, you either need to set the \c "bigint-string" option so that Qore int values are sent as strings instead of as 64bit int values (\c SQL_C_SBIGINT), or you have to bind integer values using \ref odbc_bind() and the \ref odbc_bind_constants "odbc_bind() constants" \c ODBCT_SLONG, \c ODBCT_ULONG, \c ODBCT_SSHORT, \c ODBCT_USHORT, \c ODBCT_STINYINT or \c ODBCT_UTINYINT, and make sure that the integers fit the limits imposed by these types.
+
     @subsection odbc_number_options Number Options
 
-    The number options (\c "optimal-numbers", \c "string-numbers", and \c "numeric-numbers") are all mutually-exclusive; setting one automatically disables the others.   These options also ignore their arguments; the last one set takes effect (also note that setting it with any value sets the option, even @ref False).
+    The number options (\c "optimal-numbers", \c "string-numbers" and \c "numeric-numbers") are all mutually-exclusive; setting one automatically disables the others. These options also ignore their arguments; the last one set takes effect (also note that setting it with any value sets the option, even @ref False).
 
     The default if no other option is explicitly set is \c "optimal-numbers".  Note that this represents a change from previous versions where \c NUMERIC or \c DECIMAL values were returned as strings in order to avoid the loss of information.  To set the old behavior, set the \c "string-numbers" option when creating the \c Datasource or \c DatasourcePool object.
+
+    @subsection odbc_bigint_options Bigint Options
+
+    The bigint options (\c "bigint-native" and \c "bigint-string") are mutually-exclusive; setting one automatically disables the other. These options also ignore their arguments; the last one set takes effect (also note that setting it with any value sets the option, even @ref False).
+
+    The default if no other option is explicitly set is \c "bigint-native".
+
+    @subsection odbc_frprec_option Fractional Precision Option
+
+    This option sets how big fractional seconds precision will be used when binding any date, time, timestamp and/or interval parameter with seconds part. The default value is 3. Possible values are 1 to 9.
 
     @section odbctrans Transaction Management
 
@@ -124,7 +150,7 @@ major_version * 1000000 + minor_version * 10000 + sub_version
     The following table gives data mapping when binding qore types by value.
 
     |!QoreType|!ODBC C Type|!ODBC SQL Type|!Description
-    |\c int|SQL_C_SBIGINT|\c SQL_BIGINT|Converting from a BIGINT type to smaller types is done automatically by the specific ODBC DB driver.
+    |\c int|\c SQL_C_SBIGINT, \c SQL_C_CHAR|\c SQL_BIGINT|Converting from a BIGINT type to smaller integer types is done automatically by the specific ODBC DB driver. Qore ints can be bound either as SQL_C_SBIGINT values (default) or as character strings (needed for Oracle database).
     |\c float|\c SQL_C_DOUBLE|\c SQL_DOUBLE|Qore float data is converted directly to ODBC DOUBLE data.
     |\c number|\c SQL_C_CHAR|\c SQL_CHAR|Qore number data is converted to strings before sending.
     |\c string|\c SQL_C_CHAR, \c SQL_C_WCHAR|\c SQL_CHAR, \c SQL_WCHAR|The character encoding is converted to the encoding specified for the connection if necessary and bound as SQL_CHAR values; if no encoding is specified, strings are converted to UTF-16 instead and bound as SQL_WCHAR strings
