--- a/docs/mainpage.dox.tmpl
+++ b/docs/mainpage.dox.tmpl
@@ -280,6 +280,8 @@ hash: (1 member)
     @section odbcreleasenotes Release Notes
 
     @subsection odbcv1_1 odbc Driver Version 1.1
+    - automatically strip trailing spaces \c from CHAR column values
+      (<a href="https://github.com/qorelanguage/qore/issues/4508">issue 4508</a>)
     - updated to run with the latest unixODBC versions
       (<a href="https://github.com/qorelanguage/qore/issues/4507">issue 4507</a>)
 
