--- a/docs/mainpage.dox.tmpl
+++ b/docs/mainpage.dox.tmpl
@@ -291,6 +291,9 @@ hash: (1 member)
 
     @section odbcreleasenotes Release Notes
 
+    @subsection odbcv1_1_2 odbc Driver Version 1.1.2
+    - update to fix builds with the updated \c qpp from %Qore
+
     @subsection odbcv1_1_1 odbc Driver Version 1.1.1
     - fixed a bug iterating result sets with the \c SQLStatement class
       (<a href="https://github.com/qorelanguage/qore/issues/4616">issue 4616</a>)
