--- a/docs/mainpage.dox.tmpl
+++ b/docs/mainpage.dox.tmpl
@@ -291,6 +291,10 @@ hash: (1 member)
 
     @section odbcreleasenotes Release Notes
 
+    @subsection odbcv1_1_3 odbc Driver Version 1.1.3
+    - fixed handling retrieving 0-length \c VARCHAR values
+      (<a href="https://github.com/qorelanguage/qore/issues/4681">issue 4681</a>)
+
     @subsection odbcv1_1_2 odbc Driver Version 1.1.2
     - update to fix builds with the updated \c qpp from %Qore
 
